# controller/checkbox_controller.go
@@ -5,15 +5,17 @@ import (
 	"errors"
 	"github.com/xpitr256/home-vision-challenge/model"
 	"github.com/xpitr256/home-vision-challenge/service"
+	"log"
 	"net/http"
 	"strconv"
 )
 
 type CheckboxResponse struct {
-	ImageName       string           `json:"image_name"`
-	TotalDetections int              `json:"total_detections"`
-	Checkboxes      []model.Checkbox `json:"checkboxes"`
-	SizeInPixels    int              `json:"size_in_pixels"`
+	ImageName              string           `json:"image_name"`
+	TotalDetections        int              `json:"total_detections"`
+	CheckboxSizeInPixels   int              `json:"checkbox_size_in_pixels"`
+	ImageWithCheckboxesUrl string           `json:"image_with_checkboxes_url"`
+	Checkboxes             []model.Checkbox `json:"checkboxes"`
 }
 
 func GetCheckboxSize(r *http.Request) (int, error) {
@@ -36,21 +38,30 @@ func CheckboxHandler(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json")
 	checkboxSizeInPixels, err := GetCheckboxSize(r)
 	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
+		log.Printf("Error getting checkbox size: %v", err)
+		w.WriteHeader(http.StatusBadRequest)
+		json.NewEncoder(w).Encode(map[string]interface{}{
+			"error":  err.Error(),
+			"status": http.StatusBadRequest,
+		})
 	}
-	checkboxes, imageName, err := service.GetCheckboxes(checkboxSizeInPixels)
+	checkboxes, imageName, responseImageUrl, err := service.GetCheckboxes(checkboxSizeInPixels)
 	if err != nil {
+		log.Printf("Error processing checkboxes: %v", err)
 		w.WriteHeader(http.StatusInternalServerError)
-		json.NewEncoder(w).Encode(map[string]string{"error": "Processing checkboxes"})
+		json.NewEncoder(w).Encode(map[string]interface{}{
+			"error":  err.Error(),
+			"status": http.StatusInternalServerError,
+		})
 		return
 	}
 	w.WriteHeader(http.StatusOK)
 	response := CheckboxResponse{
-		ImageName:       imageName,
-		TotalDetections: len(checkboxes),
-		Checkboxes:      checkboxes,
-		SizeInPixels:    checkboxSizeInPixels,
+		ImageName:              imageName,
+		TotalDetections:        len(checkboxes),
+		Checkboxes:             checkboxes,
+		CheckboxSizeInPixels:   checkboxSizeInPixels,
+		ImageWithCheckboxesUrl: responseImageUrl,
 	}
 	json.NewEncoder(w).Encode(response)
 }
